--- a/101.md
+++ b/101.md
@@ -9,7 +9,7 @@ permalink: /101/
             <iframe src="https://www.youtube.com/embed/k3uHFk1PAAM?rel=0" frameborder="0" allow="autoplay;"
                     allowfullscreen class="video"
                     style="position: absolute;top: 0; left: 0; width: 100%; height: 100%;">
-                <img src="resources/toolboxVideoPlaceholder.jpg" border="0">
+                <img src="../resources/toolboxVideoPlaceholder.jpg" border="0">
             </iframe>
         </div>
     </div>
@@ -18,15 +18,15 @@ permalink: /101/
 <div class="container">
         <div class="columns is-vcentered is-centered is-multiline ">
             <div class="column is-one-third is-vcentered is-centered">
-                <p><img src="resources/distance.gif" alt=""/></p>
+                <p><img src="../resources/distance.gif" alt=""/></p>
                 <div class="subtitle">Spatial Tools</div>
             </div>
             <div class="column is-one-third">
-                <p><img src="resources/vst.gif" alt=""/></p>
+                <p><img src="../resources/vst.gif" alt=""/></p>
                 <div class="subtitle">Spatial Programming</div>
             </div>
             <div class="column is-one-third">
-                <p><img src="resources/mir.gif" alt=""/></p>
+                <p><img src="../resources/mir.gif" alt=""/></p>
                 <div class="subtitle">Spatial Robotic UI</div>
             </div>
         </div>
