--- a/101.md
+++ b/101.md
@@ -460,3 +460,43 @@ Each object will display the IP address of the Edge Server it is being hosted by
 If an object name appears in red, that means that the Vuforia Engine was unable to initialize an AR target for that object using the data hosted by the Edge Server, so you won't be able to recognize that object in your space and see its AR content. Object names appearing in black have been successfully added to the AR tracker.
 
 <p style = "clear: left;"></p>
+
+
+
+### Creating Objects on the Edge Server
+
+In addition to adding AR content that floats in space, Vuforia Spatial Toolbox lets you attach AR content to physical objects. AR content will "stick" to this object as it moves around. Also, tools attached to an object can make use of Hardware Interfaces to read and write data to things in the physical world, such as an Arduino, a Lego robot, or an industrial PLC.
+
+Creating an object is easy. Just run the Vuforia Spatial Edge Server, open up its interface, and click the "Add Object" button. Give it a name and drag-and-drop a JPG image onto it to set its target. The "Add Tool" button can be used to give it some customizable AR content that will appear when you look at that image with the Vuforia Spatial Toolbox app, and you can add more tools to it from the Pocket menu in the app.
+
+![Create an object with an image target](../resources/create-object-with-image.gif)
+
+### Connecting to Hardware
+
+The "Manage Hardware Interfaces" tab of the Edge Server will show you a list of all the Hardware Interfaces you currently have installed on this server. By default, your server only has the Kepware interface for connecting to industrial machines, but you can download more integrations from the [Add-ons page](https://spatialtoolbox.vuforia.com/docs/add-ons). Some hardware interfaces can be configured with additional settings, for example the IP address or authentication credentials for the corresponding IoT gateway. Most hardware interfaces will automatically generate and configure Toolbox objects based on the physical devices they detect. You'll then be able to attach target images to them in the Object Configuration tab and see their datapoints as nodes in the Spatial Toolbox.
+
+![Configure hardware interfaces on the Edge Server](../resources/hardware-interface-configuration.gif)
+
+### Extending the Platform as a Developer
+
+Vuforia Spatial Toolbox is an open source platform that is meant to be extended. To do so, we have the concept of an **Add-on** that anyone can build to add new components and functionality to the system. 
+
+The Vuforia Spatial Edge Server has an `addons` directory that can contain any number of add-ons. Each add-on can contain any combination of the following: tools, hardware interfaces, node types, logic blocks, and feature scripts.
+
+![Diagram of add-ons within Edge Server](../resources/addons-edge-server-diagram.png)
+
+Hardware interfaces will appear in the Edge Server interface. Tools will appear in the Spatial Toolbox app's pocket menu while you are looking at any objects hosted by your server. Logic Blocks will appear in the logic block menu if the logic node is attached to an object hosted by your server. New node types don't appear in any menu, but can be utilized by your tools when you develop them.
+
+Feature Scripts are an advanced type of add-on that lets you directly customize the Spatial Toolbox app code in a powerful way. And if anything you want to build doesn't fit into an add-on, you can directly modify and collaborate on the open source projects for the Vuforia Spatial Edge Server and Vuforia Spatial Toolbox on GitHub.
+
+So far, the following three add-ons have been developed and are being maintained. We welcome your contributions to these add-ons, and encourage you to create new add-ons that push the platform in new directions.
+
+![Diagram of the three current add-ons](../resources/current-addons-diagram.png)
+
+### Getting Involved with the Community
+
+Vuforia Spatial Toolbox is an open source project, licensed under MPL 2.0, and we encourage you to join our community and contribute to the project in whatever way you can. Anyone is welcome and encouraged to be a part of our community, whether you’re a student looking to learn about Augmented Reality and Spatial Computing, a hobbyist looking to experiment with some DIY projects, an innovation engineer looking to use this in your industry, or a researcher looking to push the boundaries of this platform even further.
+
+**Forum** 
+
+The main hub of our community is the [Spatial Toolbox Forum](http://forum.spatialtoolbox.vuforia.com/). Introduce yourself, ask questions, share your knowledge, discuss new ideas, and inspire others by showing what you’ve built.
