--- a/101.md
+++ b/101.md
@@ -2,19 +2,16 @@
 layout: home-101
 permalink: /101/
 ---
-<section class="section">
-    <div class="container">
-        <h1 class="title header-home">A Toolbox for Spatial Computing Experiments</h1>
-        <div class="column is-full" style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
+## A Toolbox for Spatial Computing Experiments
+
+<div class="column is-full" style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
             <iframe src="https://www.youtube.com/embed/k3uHFk1PAAM?rel=0" frameborder="0" allow="autoplay;"
                     allowfullscreen class="video"
                     style="position: absolute;top: 0; left: 0; width: 100%; height: 100%;">
                 <img src="../resources/toolboxVideoPlaceholder.jpg" border="0">
             </iframe>
-        </div>
-    </div>
-</section>
-<section class="section">
+</div>
+
 <div class="container">
         <div class="columns is-vcentered is-centered is-multiline ">
             <div class="column is-one-third is-vcentered is-centered">
@@ -30,10 +27,9 @@ permalink: /101/
                 <div class="subtitle">Spatial Robotic UI</div>
             </div>
         </div>
-    </div>
-</section>
-<section class="section">
-    <div class="container">
+</div>
+
+<div class="container">
     <h2 class="title">Download</h2>
     <h3 class="title">Vuforia Spatial Toolbox</h3>
 <div class="buttons">
@@ -69,9 +65,10 @@ permalink: /101/
             <span>Source Code on GitHub</span>
         </button>
     </div>
-    </div>
-</section>
+</div>
 
+## Forum
+Join our community: [Spatial Toolbox Forum](http://forum.spatialtoolbox.vuforia.com/)
 
 ## Getting Started with the Vuforia Spatial Toolbox
 
@@ -496,7 +493,3 @@ So far, the following three add-ons have been developed and are being maintained
 ### Getting Involved with the Community
 
 Vuforia Spatial Toolbox is an open source project, licensed under MPL 2.0, and we encourage you to join our community and contribute to the project in whatever way you can. Anyone is welcome and encouraged to be a part of our community, whether you’re a student looking to learn about Augmented Reality and Spatial Computing, a hobbyist looking to experiment with some DIY projects, an innovation engineer looking to use this in your industry, or a researcher looking to push the boundaries of this platform even further.
-
-**Forum** 
-
-The main hub of our community is the [Spatial Toolbox Forum](http://forum.spatialtoolbox.vuforia.com/). Introduce yourself, ask questions, share your knowledge, discuss new ideas, and inspire others by showing what you’ve built.
